--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </tr>
       <tr>
         <td>2021</td>
-        <td>Beginner as Web Dveloper</td>
+        <td>Beginner as Web Developer</td>
       </tr>
     </tbody>
   </table>
